Remove use of subprojects and allprojects from gradle build